@@ -166,7 +166,6 @@
   position: relative;
   margin-right: 9px;
   overflow: hidden; 
-  z-index: 1;
 }
 
 .cr-radio-button__load__toggle {
